--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 </div>
 
                                 <h2 class="mb-4">I am Loraine.</h2>
-                                <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Systems Administrator</a></p>
+                                <p class="mb-4"><a class="custom-btn btn custom-link">Systems Administrator</a></p>
                             </div>
                         </div>
 
