--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                            <a class="nav-link click-scroll" href="#section_5">Contacts</a>
                         </li>
                     </ul>
 
