--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Services</a>
+                            <a class="nav-link click-scroll" href="#section_3">Learnings</a>
                         </li>
 
                         <li class="nav-item">
@@ -83,7 +83,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="d-lg-flex align-items-center d-none ms-auto">
                         <i class="navbar-icon bi-telephone-plus me-3"></i>
                         <a class="custom-btn btn" href="#section_5">
-                            120-240-9600
+                            CPE31S6 | 2023-2024
                         </a>
                     </div>
                 </div>
