--- a/index.html
+++ b/index.html
@@ -164,22 +164,22 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="profile-body">
                                     <p>
                                         <span class="profile-small-title">Name</span> 
-                                        <span>Joshua Morgan</span>
+                                        <span>Loraine Yzabel Castillo</span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Birthday</span> 
-                                        <span>Aug 12, 1986</span>
+                                        <span>June 24, 2003</span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Phone</span> 
-                                         <span><a href="tel: 305-240-9671">120-240-9600</a></span>
+                                         <span><a href="tel: 305-240-9671">09999999999</a></span>
                                     </p>
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:hello@josh.design">hello@josh.design</a></span>
+                                        <span><a href="mailto:hello@josh.design">qlyvcastillo@tip.edu.ph</a></span>
                                     </p>
                                 </div>
                             </div>
@@ -225,7 +225,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="row align-items-center">
 
                         <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">Companies I've had worked</h3>
+                            <h3 class="text-center mb-5">Things I've had worked on this course!</h3>
                         </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
@@ -261,24 +261,21 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                                 <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Services</h2>
+                                <h2 class="text-white ms-4 mb-0">PORTFOLIO</h2>
                             </div>
 
                             <div class="row pt-lg-5">
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Websites</h3>
+                                            <h3 class="mb-0">HOA 1</h3>
 
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$2,400</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
+                            
                                         </div>
 
                                         <p>You may want to explore Too CSS for great collection of free HTML CSS templates.</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">Navigate More</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
