--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                 <h3 class="pt-2 mb-3">A little bit about Loraine</h3>
 
-                                <p>Hi! My full name's Loraine Yzabel Castillo. 3rd-year Computer Engineering student from Technological Institute of the Philippines. <a href="https://www.tip.edu.ph/" target="_blank">Technological Institute of the Philippines</a> and <a href="https://freepik.com" target="_blank">FreePik</a> for images used in this page.</p>
+                                <p>Hi! My full name's Loraine Yzabel Castillo. 3rd-year Computer Engineering student from <a href="https://www.tip.edu.ph/" target="_blank">Technological Institute of the Philippines.</a> and <a href="https://freepik.com" target="_blank">FreePik</a></p>
 
                                 <p>You are allowed to use this template for your websites. You are not allowed to redistribute the template ZIP file on any other website. Please <a href="https://templatemo.com/contact" target="_blank">contact us</a> for more info.</p>
                             </div>
