--- a/index.html
+++ b/index.html
@@ -275,7 +275,8 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <p>You may want to explore Too CSS for great collection of free HTML CSS templates.</p>
 
-                                        <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">Navigate More</a>
+                                        <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                        <a href="https://drive.google.com/file/d/17dNdzQlzydB_89Bmm5NcuW0G3pYdUURc/view?usp=drive_link" class="custom-btn custom-border-btn btn mt-3">PDF File</a>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
