--- a/index.html
+++ b/index.html
@@ -268,12 +268,13 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">HOA 1</h3>
+                                            <h3 class="mb-0">Hands on Activity #1</h3>
 
                             
                                         </div>
 
-                                        <p>You may want to explore Too CSS for great collection of free HTML CSS templates.</p>
+                                        <p>Creating Virtual Machines</p>
+                                        <p>Create and configure Virtual Machines in Microsoft Azure or VirtualBox & Set-up a Virtual Network and Test Connectivity of VMs</p>
 
                                         <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
                                         <a href="https://drive.google.com/file/d/17dNdzQlzydB_89Bmm5NcuW0G3pYdUURc/view?usp=drive_link" class="custom-btn custom-border-btn btn mt-3">PDF File</a>
