--- a/index.html
+++ b/index.html
@@ -288,17 +288,15 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Branding</h3>
+                                            <h3 class="mb-0">Hands on Activity #2</h3>
 
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$1,200</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
+                                           
                                         </div>
 
-                                        <p>You can explore more CSS templates on TemplateMo website by browsing through different tags.</p>
+                                        <p>1.1Configure remote and local machine to connect via SSH using a KEY instead of using a password & 1.5Configure and Run ad hoc commands from local machine to remote servers</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                        <p><a href="https://drive.google.com/file/d/1XFv5bn3aDVgcXhhBpi6fZxQ4tarJE9re/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-lightbulb"></i>
@@ -309,17 +307,16 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Ecommerce</h3>
+                                            <h3 class="mb-0">Hands on Activity #3</h3>
 
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$3,600</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
+                                            
                                         </div>
 
-                                        <p>If you need a customized ecommerce website for your business, feel free to discuss with me.</p>
+                                        <p>Install Community Enterprise OS or Red Hat Linux OS & Configure remote SSH connection from remote computer to CentOS/RHEL-8</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                        <p><a href="https://drive.google.com/file/d/1JTx-NtJQVn2V-GzTXPllPc2xqdJ5yBzW/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
+
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-phone"></i>
