--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <p>Create and configure Virtual Machines in Microsoft Azure or VirtualBox & Set-up a Virtual Network and Test Connectivity of VMs</p>
 
                                         <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
-                                        <a href="https://drive.google.com/file/d/17dNdzQlzydB_89Bmm5NcuW0G3pYdUURc/view?usp=drive_link" class="custom-btn custom-border-btn btn mt-3">PDF File</a>
+                                        <p><a href="https://drive.google.com/file/d/17dNdzQlzydB_89Bmm5NcuW0G3pYdUURc/view?usp=drive_link" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
@@ -293,7 +293,8 @@ https://templatemo.com/tm-578-first-portfolio
                                            
                                         </div>
 
-                                        <p>1.1Configure remote and local machine to connect via SSH using a KEY instead of using a password & 1.5Configure and Run ad hoc commands from local machine to remote servers</p>
+                                        <p>SSH Key-Based Authentication and GIT Setup</p>
+                                        <p>Configure remote and local machine to connect via SSH using a KEY instead of using a password & Configure and Run ad hoc commands from local machine to remote servers</p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
                                         <p><a href="https://drive.google.com/file/d/1XFv5bn3aDVgcXhhBpi6fZxQ4tarJE9re/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
@@ -311,7 +312,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                             
                                         </div>
-
+                                        <p>Install SSH Server on CentOS and RHEL 8</p>
                                         <p>Install Community Enterprise OS or Red Hat Linux OS & Configure remote SSH connection from remote computer to CentOS/RHEL-8</p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
@@ -327,17 +328,13 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">SEO</h3>
-
-                                            <div class="services-price-wrap ms-auto">
-                                                <p class="services-price-text mb-0">$1,450</p>
-                                                <div class="services-price-overlay"></div>
-                                            </div>
+                                            <h3 class="mb-0">Hands on Activity #4</h3>
                                         </div>
 
-                                        <p>To list your website first on any search engine, we will work together. First Portfolio is one-page CSS Template for free download.</p>
+                                        <p>Use commands that makes changes to remote machines & Use playbook in automating ansible commands</p>
 
-                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+                                        <a href="https://github.com/lycastillo/CPE232_Loraine.git" class="custom-btn custom-border-btn btn mt-3">GitHub Link</a>
+                                        <p><a href="https://drive.google.com/file/d/1y_H6eQafA8MklQdzg76xxTzZnxhRk4D0/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-google"></i>
