--- a/index.html
+++ b/index.html
@@ -229,23 +229,23 @@ https://templatemo.com/tm-578-first-portfolio
                         </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                            <img src="download.png" class="clients-image img-fluid" alt="">
+                            <img src="images/ansible.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="download(2).jpg" class="clients-image img-fluid" alt="">
+                            <img src="images/centos.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="ansible-icon2048x2048-mc4z634w.png" class="clients-image img-fluid" alt="">
+                            <img src="images/docker.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="4844483.png" class="clients-image img-fluid" alt="">
+                            <img src="images/linux.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="1200px-CentOS_color_logo.svg.png" class="clients-image img-fluid" alt="">
+                            <img src="images/ubuntu.png" class="clients-image img-fluid" alt="">
                         </div>
 
                     </div>
