--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/linux.png" class="clients-image img-fluid" alt="">
+                            <img src="images/linux.jpg" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
@@ -341,6 +341,28 @@ https://templatemo.com/tm-578-first-portfolio
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="row pt-lg-5">
+                                <div class="col-lg-6 col-12">
+                                    <div class="services-thumb">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Hands on Activity #5</h3>
+
+                                        </div>
+
+                                        <p>Implement Ansible Roles in Playbooks</p>
+                                        <p>Use when command in playbook for different OS distributions & Apply refactoring techniques in cleaning up the playbook codes.</p>
+
+                                        <a href="https://github.com/lycastillo/SysAdS6" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                        <p><a href="https://drive.google.com/file/d/1MVQvNTSW7xDYILwRG7pxq2jWqMAs1OM4/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-globe"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                
                             </div>
                         </div>
                     </div>
