--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
                                 <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Projects</h2>
+                                <h2 class="text-white ms-4 mb-0">Major Examinations</h2>
                             </div>
                         </div>
 
@@ -387,9 +387,9 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">PRELIM</small>
 
-                                    <h3 class="projects-title">Zoik agency</h3>
+                                    <h3 class="projects-title">Prelim Exam</h3>
                                 </div>
 
                                 <a href="images/projects/nikhil-KO4io-eCAXA-unsplash.jpg" class="popup-image">
@@ -401,9 +401,9 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">MIDTERM</small>
 
-                                    <h3 class="projects-title">The Watch</h3>
+                                    <h3 class="projects-title">Midterm Exam</h3>
                                 </div>
 
                                 <a href="images/projects/the-5th-IQYR7N67dhM-unsplash.jpg" class="popup-image">
@@ -415,9 +415,9 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">FINALS</small>
 
-                                    <h3 class="projects-title">Polo</h3>
+                                    <h3 class="projects-title">Final Project</h3>
                                 </div>
 
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
