--- a/index.html
+++ b/index.html
@@ -342,7 +342,6 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
                                 </div>
 
-                                <div class="row pt-lg-5">
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
@@ -362,6 +361,25 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
                                 </div>
 
+                                    <div class="col-lg-6 col-12">
+                                    <div class="services-thumb services-thumb-up">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Hands on Activity #6</h3>
+
+                                           
+                                        </div>
+
+                                        <p>Targeting Specific Nodes</p>
+                                        <p>Individualize hosts, apply tags in selecting plays to run & managing services from remote servers using playbooks.</p>
+
+                                        <a href="https://github.com/lycastillo/HOA6.git" class="custom-btn custom-border-btn btn mt-3">GitHub Repository</a>
+                                        <p><a href="https://drive.google.com/file/d/1OrTJk6_bcHiRY4eJ0B_IY0glRsl2IKNt/view?usp=sharing" class="custom-btn custom-border-btn btn mt-3">PDF File</a></p>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-lightbulb"></i>
+                                        </div>
+                                    </div>
+                                </div> 
                                 
                             </div>
                         </div>
