--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         </div>
                                     </div>
                                 </div>
-
+                
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
@@ -324,7 +324,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         </div>
                                     </div>
                                 </div>
-
+                                <div class="row pt-lg-5">
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb services-thumb-up">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
