--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">SysAd</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0"></a>
+                <img src="images/cpe.png" class="navbar-brand mx-auto mx-lg-0" alt="">
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
