--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0"></a>
-                <img src="images/cpe.png" class="navbar-brand mx-auto mx-lg-0" alt="">
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">CPE232</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <a class="custom-btn btn" href="#section_5">
