--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-10 col-12 mx-auto">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/sysad-removebg-preview.png" class="avatar-image img-fluid" alt="">
 
                                 <h2 class="text-white ms-4 mb-0">PORTFOLIO</h2>
                             </div>
