--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="row pt-lg-5">
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
+                                        <img src="images/cpe.png" alt="" class="img-fluid">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
                                             <h3 class="mb-0">Hands on Activity #1</h3>
 
