--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ https://templatemo.com/tm-578-first-portfolio
             </section>
 
 
-            <section class="featured section-padding">
+            <section class="featured section-padding" id="section_2">
                 <div class="container">
                     <div class="row">
 
