--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Learnings</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Projects</a>
+                            <a class="nav-link click-scroll" href="#section_3">Learnings & Projects</a>
                         </li>
 
                         <li class="nav-item">
@@ -190,7 +186,7 @@ https://templatemo.com/tm-578-first-portfolio
             </section>
 
 
-            <section class="clients section-padding">
+            <section class="clients section-padding" id="section_3">
                 <div class="container">
                     <div class="row align-items-center">
 
