--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-8 col-md-8 col-12 ms-auto">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/majexam.png" class="avatar-image img-fluid" alt="">
 
                                 <h2 class="text-white ms-4 mb-0">Major Examinations</h2>
                             </div>
