--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                             <div class="col-lg-6 col-md-8 col-12">
                                 <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                    <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt="">
+                                    <img src="contact-removebg-preview.png" class="avatar-image img-fluid" alt="">
 
                                     <h2 class="text-white ms-4 mb-0">Say Hi</h2>
                                 </div>
