--- a/index.html
+++ b/index.html
@@ -610,21 +610,37 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="clearfix"></div>
 
         <footer class="site-footer">
-            <div class="container">
-                <div class="row">
+            <section class="clients section-padding">
+                <div class="container">
+                    <div class="row align-items-center">
 
-                    <div class="col-lg-12 col-12">
-                        <div class="copyright-text-wrap">
-                            <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2036 <a href="#">First Portfolio</a> Company. All rights reserved.</span>
-                                Design: 
-                                <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
-                            </p>
+
+                        <div class="col-lg-2 col-4 ms-auto clients-item-height">
+                           <a href="your_destination_url">
+                             <img src="images/ansible.png" class="clients-image img-fluid" alt="">
+                           </a>
                         </div>
-                    </div>
 
+
+                        <div class="col-lg-2 col-4 clients-item-height">
+                            <img src="images/centos.png" class="clients-image img-fluid" alt="">
+                        </div>
+
+                        <div class="col-lg-2 col-4 clients-item-height">
+                            <img src="images/docker.png" class="clients-image img-fluid" alt="">
+                        </div>
+
+                        <div class="col-lg-2 col-4 clients-item-height">
+                            <img src="images/linux.jpg" class="clients-image img-fluid" alt="">
+                        </div>
+
+                        <div class="col-lg-2 col-4 me-auto clients-item-height">
+                            <img src="images/ubuntu.png" class="clients-image img-fluid" alt="">
+                        </div>
+
+                    </div>
                 </div>
-            </div>
+            </section>
         </footer>
 
         <!-- JAVASCRIPT FILES -->
