--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="clearfix"></div>
 
         <footer class="site-footer">
-            <section class="clients section-padding">
+            <section class="projects section-padding">
                     <div class="row align-items-center">
 
 
