--- a/index.html
+++ b/index.html
@@ -613,26 +613,34 @@ https://templatemo.com/tm-578-first-portfolio
 
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                           <a href="your_destination_url">
-                             <img src="images/ansible.png" class="clients-image img-fluid" alt="">
+                           <a href="https://github.com/lycastillo">
+                             <img src="images/gith.png" class="clients-image img-fluid" alt="">
                            </a>
                         </div>
 
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/centos.png" class="clients-image img-fluid" alt="">
+                            <a href="qlyvcastillo@tip.edu.ph">
+                            <img src="images/gmail.png" class="clients-image img-fluid" alt="">
+                            </a>
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/docker.png" class="clients-image img-fluid" alt="">
+                            <a href="https://www.linkedin.com/in/lorainecastillo/h">
+                            <img src="images/linkedinn.png" class="clients-image img-fluid" alt="">
+                            </a>
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/linux.jpg" class="clients-image img-fluid" alt="">
+                            <a href="https://www.facebook.com/cpetipqc">
+                            <img src="images/cpe.png" class="clients-image img-fluid" alt="">
+                            </a>
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="images/ubuntu.png" class="clients-image img-fluid" alt="">
+                            <a href="https://www.facebook.com/loraineeeeeeeeeeee/">
+                            <img src="images/fb.png" class="clients-image img-fluid" alt="">
+                            </a>
                         </div>
 
                     </div>
