--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-2 col-4 clients-item-height">
                             <a href="qlyvcastillo@tip.edu.ph">
-                            <img src="images/gmail.png" class="clients-image img-fluid" alt="">
+                            <img src="images/gmaill.png" class="clients-image img-fluid" alt="">
                             </a>
                         </div>
 
