--- a/index.html
+++ b/index.html
@@ -611,13 +611,17 @@ https://templatemo.com/tm-578-first-portfolio
             <section class="projects section-padding">
                     <div class="row align-items-center">
 
+                        <div class="col-lg-2 col-4 clients-item-height">
+                            <a href="https://www.tip.edu.ph/">
+                            <img src="images/T.I.P._Logo-removebg-preview.png" class="clients-image img-fluid" alt="">
+                            </a>
+                        </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
                            <a href="https://github.com/lycastillo">
                              <img src="images/gith.png" class="clients-image img-fluid" alt="">
                            </a>
                         </div>
-
 
                         <div class="col-lg-2 col-4 clients-item-height">
                             <a href="qlyvcastillo@tip.edu.ph">
@@ -628,12 +632,6 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-2 col-4 clients-item-height">
                             <a href="https://www.linkedin.com/in/lorainecastillo/h">
                             <img src="images/linkedinn.png" class="clients-image img-fluid" alt="">
-                            </a>
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <a href="https://www.facebook.com/cpetipqc">
-                            <img src="images/cpe.png" class="clients-image img-fluid" alt="">
                             </a>
                         </div>
 
