--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-2 col-4 clients-item-height">
                             <a href="https://www.tip.edu.ph/">
-                            <img src="images/T.I.P._Logo-removebg-preview.png" class="clients-image img-fluid" alt="">
+                            <img src="images/tiplogo.png" class="clients-image img-fluid" alt="">
                             </a>
                         </div>
 
