--- a/index.html
+++ b/index.html
@@ -611,11 +611,7 @@ https://templatemo.com/tm-578-first-portfolio
             <section class="projects section-padding">
                     <div class="row align-items-center">
 
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <a href="https://www.tip.edu.ph/">
-                            <img src="images/tiplogo.png" class="clients-image img-fluid" alt="">
-                            </a>
-                        </div>
+
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
                            <a href="https://github.com/lycastillo">
@@ -638,6 +634,12 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
                             <a href="https://www.facebook.com/loraineeeeeeeeeeee/">
                             <img src="images/fb.png" class="clients-image img-fluid" alt="">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-2 col-4 clients-item-height">
+                            <a href="https://www.facebook.com/cpetipqc">
+                            <img src="images/cpe.png" class="clients-image img-fluid" alt="">
                             </a>
                         </div>
 
