--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="images/selllf.png" class="hero-image img-fluid" alt="">
+                            <div class="hero-image">
+                            <img src="images/selllf.png" class="img-fluid" alt="">
                         </div>
-
                     </div>
                 </div>
 
@@ -634,12 +634,6 @@ https://templatemo.com/tm-578-first-portfolio
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
                             <a href="https://www.facebook.com/loraineeeeeeeeeeee/">
                             <img src="images/fb.png" class="clients-image img-fluid" alt="">
-                            </a>
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <a href="https://www.facebook.com/cpetipqc">
-                            <img src="images/cpe.png" class="clients-image img-fluid" alt="">
                             </a>
                         </div>
 
