--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <div class="hero-image">
-                            <img src="images/selllf.png" class="img-fluid" alt="">
+                            <img src="images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
                         </div>
+
                     </div>
                 </div>
 
