--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="images/selllf.png" class="hero-image img-fluid" alt="">
+                            <img src="images/selllf.png" class="img-fluid avatar-image-large" alt="">
                         </div>
-
+                            <div class="col-lg-7 col-12">
+                            </div>
                     </div>
                 </div>
 
