--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ https://templatemo.com/tm-578-first-portfolio
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <i class="navbar-icon bi-telephone-plus me-3"></i>
+                        <img src="images/cpe.png" alt="" class="navbar-icon me-3">
                         <a class="custom-btn btn" href="#section_5">
                             CPE31S6 | 2023-2024
                         </a>
