--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@ https://templatemo.com/tm-578-first-portfolio
                                 <p class="mb-4"><a class="custom-btn btn custom-link">Systems Administrator</a></p>
                             </div>
                         </div>
+                        <div class="col-lg-5 col-12 position-relative">
+                            <div class="hero-image-wrap"></div>
+                            <img src="images/selllf.png" class="hero-image img-fluid" alt="">
+                        </div>
                     </div>
                 </div>
 
