--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ https://templatemo.com/tm-578-first-portfolio
                             </div>
                         </div>
                         <div class="col-lg-5 col-12 position-relative">
-                            <div class="hero-image-wrap"></div>
-                            <img src="images/selllf.png" class="hero-image img-fluid" alt="">
+                            <img src="images/picself.png" class="hero-image img-fluid" alt="">
                         </div>
                     </div>
                 </div>
