--- a/index.html
+++ b/index.html
@@ -152,27 +152,27 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="about-thumb">
                                 <div class="row">
                                     <div class="col-lg-6 col-6 featured-border-bottom py-2">
-                                        <strong class="featured-numbers">20+</strong>
+                                        <strong class="featured-numbers">3 Years</strong>
 
-                                        <p class="featured-text">Years of Experiences</p>
+                                        <p class="featured-text">in College</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
-                                        <strong class="featured-numbers">245</strong>
+                                        <strong class="featured-numbers">18</strong>
 
-                                        <p class="featured-text">Happy Customers</p>
+                                        <p class="featured-text">Projects in Systems Administration</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 pt-4">
-                                        <strong class="featured-numbers">640</strong>
+                                        <strong class="featured-numbers">Track 2</strong>
 
-                                        <p class="featured-text">Project Finished</p>
+                                        <p class="featured-text">Systems Administration</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
-                                        <strong class="featured-numbers">72+</strong>
+                                        <strong class="featured-numbers">2023-2024</strong>
 
-                                        <p class="featured-text">Digital Awards</p>
+                                        <p class="featured-text">First Semester</p>
                                     </div>
                                 </div>
                             </div>
