--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="about-thumb">
                                 <div class="row">
                                     <div class="col-lg-6 col-6 featured-border-bottom py-2">
-                                        <strong class="featured-numbers">3 Years</strong>
+                                        <strong class="featured-numbers">3</strong>
 
-                                        <p class="featured-text">in College</p>
+                                        <p class="featured-text">Years in College</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
@@ -164,15 +164,15 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
 
                                     <div class="col-lg-6 col-6 pt-4">
-                                        <strong class="featured-numbers">Track 2</strong>
+                                        <strong class="featured-numbers">2</strong>
 
-                                        <p class="featured-text">Systems Administration</p>
+                                        <p class="featured-text">Track 2: Systems Administration</p>
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
-                                        <strong class="featured-numbers">2023-2024</strong>
+                                        <strong class="featured-numbers">1</strong>
 
-                                        <p class="featured-text">First Semester</p>
+                                        <p class="featured-text">1st Semester 2023-2024</p>
                                     </div>
                                 </div>
                             </div>
