--- a/index.html
+++ b/index.html
@@ -88,13 +88,10 @@ https://templatemo.com/tm-578-first-portfolio
 
         <main>
 
-            <section class="hero d-flex justify-content-center align-items-center" id="section_1">
-                <div class="container">
-                    <div class="row">
-
-            <div class="col-lg-7 col-12">
-                            <div class="hero-text">
-                                <div class="hero-title-wrap d-flex align-items-center mb-4">
+<div class="container text-center">
+    <div class="row">
+        <div class="col-lg-7 col-12 mx-auto">
+            <div class="hero-text">
                 <div class="hero-title-wrap d-flex align-items-center mb-4">
                     <img src="images/formal.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
                     <h1 class="hero-title ms-3 mb-0">Hello there!</h1>
@@ -105,6 +102,7 @@ https://templatemo.com/tm-578-first-portfolio
         </div>
     </div>
 </div>
+
 
 
 
