--- a/index.html
+++ b/index.html
@@ -629,6 +629,16 @@ https://templatemo.com/tm-578-first-portfolio
                             </a>
                         </div>
 
+                        <div class="col-lg-12 col-12">
+                        <div class="copyright-text-wrap">
+                            <p class="mb-0">
+                                <span class="copyright-text">This course, the class, and the entire experience we've had were unmatchable. We were able to enhance
+                                our skills that we've initially had since SysAd 1, and although things went a bit more difficult this time, it's fun that we've learn
+                                a lot of new concepts that we'll surely apply once we go into SysAd 3.</span>
+                            </p>
+                        </div>
+                    </div>
+
                     </div>
                 </div>
             </section>
