--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ https://templatemo.com/tm-578-first-portfolio
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Final Project</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">SysAd</a>
 
                 <div class="d-flex align-items-center d-lg-none">
-                    <i class="navbar-icon bi-telephone-plus me-3"></i>
+                    <img src="images/cpe.png" alt="" class="navbar-icon me-3">
                     <a class="custom-btn btn" href="#section_5">
                         CPE31S6 | 2023-2024
                     </a>
