--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ https://templatemo.com/tm-578-first-portfolio
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">About</a>
+                            <a class="nav-link click-scroll" href="#section_3">About</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Learnings and Projects</a>
+                            <a class="nav-link click-scroll" href="#section_4">Learnings and Projects</a>
                         </li>
 
                         <li class="nav-item">
@@ -73,8 +73,8 @@ https://templatemo.com/tm-578-first-portfolio
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <i class="navbar-icon bi-telephone-plus me-3"></i>
-                        <a class="custom-btn btn" href="#section_3">
+                        <img src="images/cpe.png" alt="" class="navbar-icon me-3">
+                        <a class="custom-btn btn" href="#section_4">
                             CPE31S6 | 2023-2024
                         </a>
                     </div>
