--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-578-first-portfolio
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">About</a>
+                            <a class="nav-link click-scroll" href="#section_1">About</a>
                         </li>
 
                         <li class="nav-item">
@@ -141,7 +141,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:hello@josh.design">qlyvcastillo@tip.edu.ph</a></span>
+                                        <span><a href="">qlyvcastillo@tip.edu.ph</a></span>
                                     </p>
                                 </div>
                             </div>
